# rust_chat

./: .gitignore  bunfig.toml  docker-compose.yml  package.json
backend/: .gitignore  Cargo.toml  Dockerfile  package.json
backend/src/: crypto.rs  handlers.rs  main.rs
frontend/: package-lock.json  package.json
frontend/pages/api/: chat.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/channel/[id]/: page.tsx
frontend/src/components/: Chat.module.css  Chat.tsx  Message.module.css  Message.tsx  Navbar.module.css  Navbar.tsx
