[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.30", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
ring = "0.17"
base64 = "0.21"
rand = "0.8"
